--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Max Kurzner's Personal Website"
 title_separator          : "-"
 name                     : &name "Max Kurzner"
 description              : &description "My Personal Website"
