--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Max Kurzner"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
+  bio              : "PhD Candidate in Astrophysics interested in the intersection of galaxy morphology and modern methods of data analysis"
   location         : "Victoria,BC"
   employer         : "University of Victoria"
   email            : "mkurzner@uvic.ca"
