Changing avatar to headshot photo

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Max Kurzner"
-  avatar           : "profile.png"
+  avatar           : "PAGSA_headshot.jpeg"
   bio              : "PhD Candidate in Astrophysics interested in the intersection of galaxy morphology and modern methods of data analysis"
   location         : "Victoria,BC"
   employer         : "University of Victoria"
