--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,11 +9,11 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Outreach"
+    url: /outreach/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "Updates"
+    url: /updates/
     
   - title: "CV"
     url: /cv/
